--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.images .image1{
+  height: 30vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:70px ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.images h3{
+  color: rgb(43, 179, 43);
+text-align: center;
+margin-top: 40px;
+font-size: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+.inputbtn{
+margin-left: 7px;
+}
+
+.inputbtn .btn1{
+  margin-left: 438px;
+  height: 8vh;
+  width: 32%;
+  margin-top: 20px;
+  /* border-radius: 4px; */
+  font-size: 18px;
+  box-sizing: border-box;
+  
+
+}
+
+.inputbtn2 .btn2{
+  margin-left: 438px;
+  height: 8vh;
+  width: 32%;
+  margin-top: 8px;
+  /* border-radius: 4px; */
+  font-size: 18px;
+  box-sizing: border-box;
+}
+
+.sbbntn{
+  margin-left: 438px;
+  height: 11vh;
+
+  width: 32%;
+  margin-top: 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  background-color: darkgreen;
   color: white;
+  font-size: 20px;
+  cursor: pointer;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
+.inputbtn .anchortg {
+  margin-left: 575px;
+  text-decoration: none;
+  color: darkgreen;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+  .sbbntn:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
