--- a/src/App.css
+++ b/src/App.css
@@ -5,29 +5,30 @@
 }
 
 .images .image1{
-  height: 30vh;
+  height: 11vh;
   display: block;
-  margin-left: auto;
+  margin-left: 512px;
   margin-right: auto;
-  margin-top:70px ;
+  margin-top: 130px;
 }
 
 .images h3{
   color: rgb(43, 179, 43);
-text-align: center;
-margin-top: 40px;
-font-size: 15px;
+  text-align: center;
+  margin-top: 24px;
+  font-size: 18px;
 }
 
 
 .inputbtn{
-margin-left: 7px;
+  margin-left: 7px;
+  margin-top: 25px;
 }
 
 .inputbtn .btn1{
   margin-left: 438px;
   height: 8vh;
-  width: 32%;
+  width: 30%;
   margin-top: 20px;
   /* border-radius: 4px; */
   font-size: 18px;
@@ -39,7 +40,7 @@ margin-left: 7px;
 .inputbtn2 .btn2{
   margin-left: 438px;
   height: 8vh;
-  width: 32%;
+  width: 30%;
   margin-top: 8px;
   /* border-radius: 4px; */
   font-size: 18px;
@@ -50,7 +51,7 @@ margin-left: 7px;
   margin-left: 438px;
   height: 11vh;
 
-  width: 32%;
+  width: 30%;
   margin-top: 12px;
   border-radius: 4px;
   font-size: 15px;
@@ -71,3 +72,15 @@ margin-left: 7px;
   .sbbntn:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
+
+
+  .images{
+    margin-right: 23px;
+  }
+
+  input::placeholder {
+    font-weight: bold;
+    
+    color: black;
+    margin-left: 10rem !important;
+}
