--- a/src/Style.css
+++ b/src/Style.css
@@ -34,8 +34,8 @@
 
 
 .Page_two_logoAndLogOut img {
-    width: 69px;
-    height: 69px;
+    width: 133.3pt;
+    height: 38pt;
 }
 
 .Page_two_logoAndLogOut {
@@ -46,21 +46,16 @@
 }
 
 .Page_two_logoAndLogOut h3 {
-    font-size: 16px;
+    font-size: 14pt;
+    color: rgb(0,0,0);
+    width: 372pt;
+    height: 37pt;
     text-align: center;
-    margin-right: 700px;
-    margin-bottom: 0px;
+    margin-top: 1%;
+    margin-right: 38%;
 }
 
- .heading{
-    /* tab-size: 46px; */
-    font-size: 12px;
-    /* margin-right: 204px; */
-    margin-left: 112px;
-    /* top: 38%; */
-    margin-bottom: 20px;
-    margin-top: -30px;
-}
+
 
 .Page_two_LogOut {
     display: flex;
@@ -79,24 +74,35 @@
 }
 
 .Page_two_LogOut i {
-    font-size: 19px;
+    font-size: 14pt;
+    letter-spacing: -0.01pt;
     padding-right: 6px;
-    margin-left: 1045px;
+    margin-left: 92%;
     /* margin-bottom: -15px; */
-    margin-top: -71px;
+    margin-top: -65px;
 }
 
 .head{
-    font-size: 15px;
-    margin-left: 30px;
-    margin-top: -17px;
+    font-size: 14pt;
+    letter-spacing: 0.01pt;
+    color: rgb(0,0,0);
+    margin-left: 25px;
+    margin-top: -20px;
    
 }
 
 
 .heading span{
-    font-size: 15px;
-    margin-left: 12px;
+    font-size: 14pt;
+   
+    /* margin-left: 123px; */
+    margin-left: 12%;
+    margin-left: 20%;
+}
+
+.heading{
+    
+    margin-top: -3%;
 }
 
 /* font-size: 15px;
@@ -117,10 +123,11 @@ margin-left: 120px; */
 
 
 .Page_two_search_Chooes_box .bottom {
-    font-size: 15px;
+    font-size: 18pt;
+    color: rgb(0,0,0);;
     border-bottom: 1px solid #00a53e;
     padding-bottom: 5px;
-    margin: 0 10px;
+    margin: 20px 10px;
 }
 
 .Page_two_search_Chooes_box {
@@ -138,8 +145,9 @@ margin-left: 120px; */
 }
 
 .kt h2 {
-    font-size: 17px;
+    font-size: 15pt;
     margin-left: 25px;
+    color: rgb(0,0,0);
 }
 
 .chassis {
@@ -147,8 +155,9 @@ margin-left: 120px; */
 }
 
 .chassis h2 {
-    font-size: 17px;
+    font-size: 15pt;
     margin-left: 25px;
+    color: rgb(0,0,0);
 }
 
 .page_two_chooes {
@@ -164,6 +173,7 @@ margin-left: 120px; */
     font-size: 21px;
     font-weight: bold;
     height: 55px;
+    margin-right: -16%;
     padding-top:6px;
 }
 
@@ -172,7 +182,7 @@ margin-left: 120px; */
     /* font-size: 100px; */
     height: 10vh;
     margin-top: 10px;
-    margin-left: 4px;
+    margin-left: 12px;
 }
 
 .page_two_or {
@@ -181,7 +191,7 @@ margin-left: 120px; */
 
 .page_two_serchbar {
     box-shadow: 0 0 1px black;
-    width: 400px;
+    width: 425px;
     border-radius: 5px;
     position: relative;
     margin-right: 300px;
@@ -190,25 +200,27 @@ margin-left: 120px; */
 
 .page_two_serchbar input {
     width: 300px;
-    height: 45px;
+    background-color: rgb(245,255,248);
+    height: 60px;
     font-size: 13px;
     outline: none;
     border: none;
     padding-left: 5px;
-    border-radius: 6px;
+    border-radius: 6pt;
 }
 
 .page_two_serchbar button {
-    width: 155px;
-    height: 45px;
+    width: 150pt;
+    height: 45pt;
     border: none;
-    border-radius: 0 5px 5px 0;
-    background-color: #00a53e;
+    border-radius: 6pt;
+    background-color: rgb(8,136,38);
     position: absolute;
+    letter-spacing: 0.89pt;
     right: 0%;
-    color: white;
+    color: rgb(255,255,255);
     font-weight: bold;
-    font-size: 15px;
+    font-size: 18pt;
     cursor: pointer;
 }
 
@@ -228,10 +240,12 @@ margin-left: 120px; */
 
 
 .vl {
-    border-right: 1px dashed #00a53e;
-    height: 70px;
+    border-right: 1px dashed 
+    rgb(0,0,0);
+    height: 38pt;
+    width: 1pt;
     position: absolute;
-    left: 50%;
+    left: 58%;
     margin-left: -540px;
     top: 15px;
   }
@@ -257,7 +271,7 @@ margin-left: 120px; */
 }
 
 tr th {
-    background-color: #00a53e;
+    background-color: rgb(8,136,38);
     padding: 10px;
     width: 170px;
     text-align: center;
@@ -274,7 +288,9 @@ tr td {
 
 .page_two_table span {
     display: flex;
-    font-size: 16px;
+    font-size: 15pt;
+    letter-spacing: 0.58pt;
+    color: rgb(0,0,0);
     font-weight: bold;
     margin-left: 17px;
     margin-bottom: 5px;
@@ -282,7 +298,8 @@ tr td {
 }
 
 .page_two_table p {
-    margin: 0 10px;
+    margin: 4px 10px;
+    color: rgb(0,0,0);
 }
 
 
@@ -298,7 +315,8 @@ tr td {
 /* -------------------------------------------------------- (  complaint_failure ) --------------------------------------------------------- */
 
 .page_two_complaint_failure h2 {
-    font-size: 20px;
+    font-size: 18pt;
+    color: rgb(0,0,0);
 }
 
 .page_two_complaint_failure {
@@ -415,7 +433,7 @@ tr td {
 .page_two_complaint_list h3 {
     font-weight: bold;
     /* text-align: center; */
-    margin-left: 20px;
+    margin-left: 50px;
     font-size: 21px;
     margin-bottom: 20px;
 }
@@ -432,8 +450,8 @@ tr td {
 }
 
 .page_two_complaint_list button {
-    width: 25%;
-    height: 45px;
+    width: 45%;
+    height: 50px;
     font-size: 19px;
     color: white;
     background-color: #00a53e;
@@ -441,16 +459,27 @@ tr td {
     cursor: pointer;
     margin-top: 20px;
     border-radius: 4px;
-    margin-left: 200px;
+    margin-left: 220px;
 }
 
 
 
 
+.complaint p{
+    font-size: 16pt;
+}
 
+.complaint1 p{
+    font-size: 16pt;
+}
 
+.failure1 p{
+    font-size: 16pt;
+}
 
-
+.failure p{
+    font-size: 16pt;
+}
 
 
 
@@ -549,7 +578,9 @@ tr td {
 
 .tablecheckbox h2{
     display: flex;
-    font-size: 16px;
+    font-size: 18pt;
+    letter-spacing: -0.01pt;
+    color: rgb(0,0,0);
     font-weight: bold;
     margin-left: 20px;
     margin-bottom: 5px;
@@ -558,7 +589,7 @@ tr td {
 
 
 .tablecheckbox img{
-    width: 35vh;
+    width: 50vh;
     /* margin-left: 0px; */
     margin-top: 25px;
 }
@@ -570,19 +601,22 @@ tr td {
 
 
 .tablecheckbox .checktable{
-    width: 198vh;
+    width: 166vh;
     /* top: 6%; */
-    margin-top: -147px;
-    margin-left: 225px;
+    margin-top: -237px;
+    margin-left: 23%;
 }
 
 /* .checktable:hover{
    background-color: cadetblue;
 } */
 
+
 .dropdown .dpdbtn{
     height: 9vh;
-    width: 35%;
+    width: 35%; 
+    background-color: rgb(245,255,248);
+    border-radius: 6pt;
 }
 
 .dpdbtn{
@@ -594,18 +628,30 @@ tr td {
 
 .labell{
     margin-left: 17px;
+    font-size: 15pt;
+    letter-spacing: -0.01pt;
+    color: rgb(0,0,0);
 }
 
 .tdata{
-    background-color: rgb(168, 249, 249)   ;
+    background-color: rgb(188,242,204)  ;
 }
 
 .tdata2{
-    background-color: pink;
+    background-color: rgb(188,242,204) ;
+}
+
+
+.tdata3{
+    background-color: rgb(255,190,186);
+}
+
+.tdata4{
+    background-color: rgb(255,190,186);
 }
 
 /* .tdata3{
-    background-color: pink;
+    batrkground-color: pink;
 }
 
 .tdata4{
@@ -623,12 +669,22 @@ tr td {
 
 .click{
     accent-color: #00a53e;
+    cursor: pointer;
    
+}
+
+.checktable label{
+    cursor: pointer;
 }
 
 .click:hover{
     box-shadow: #00a53e;
+  
     }
+
+  .checktable td:hover{
+    background-color:   rgb(219,255,227);
+  }  
 
 
 .tab {
@@ -639,6 +695,11 @@ background-color:  rgb(237, 242, 242);
 
 .checktable td{
     text-align: left;
+ 
+}
+
+.checktable .scratches{
+    background-color: rgb(243,243,243);
 }
 
 .checktable .click{
@@ -654,20 +715,24 @@ background-color:  rgb(237, 242, 242);
     text-align: center;
     margin-right: 18px;
     margin-left: 0px;
+    margin-top: -4%;
 }
 
 .checktable label .damaged{
     margin-left: 0px;
+    margin-top: -4%;
 }
 
 .checktable label .guard{
     margin-left:0px;
+    margin-top: -4%;
 }
 /************************************************************** customer complaint tail &*****************************************/
 
 
 .page_two_complaint_failure1 h2 {
-    font-size: 20px;
+    font-size: 18pt;
+    color: rgb(0,0,0);
 }
 
 .page_two_complaint_failure1  {
@@ -784,12 +849,15 @@ background-color:  rgb(237, 242, 242);
 
 
 .search_foreman .select{
-    width: 35%;
-    height: 12vh;
-    background-color: rgb(237, 242, 242);
-    border-radius: 5px;
+    width: 320pt;;
+    height: 62pt;;
+    background-color: rgb(226,245,231);
+    border-radius: 6pt;
     border: 1px solid white;
     margin-bottom: 60px;
+    font-size: 16pt;
+    letter-spacing: 0.62pt;
+    margin-left: 1%;
 }
 
 .search_foreman{
@@ -800,8 +868,10 @@ background-color:  rgb(237, 242, 242);
 
 
 .search_foreman option{
-    font-size: 20px;
+    font-size: 16pt;
+    letter-spacing: 0.62pt;
     text-align: center;
+    color: rgb(0,0,0);
 }
 
 /********************************************************** job card button ***********************************************/
@@ -838,22 +908,83 @@ background-color:  rgb(237, 242, 242);
 
 
 .job_cardbtn{
-    font-size: 15px;
-    background-color: #00a53e;
+   
+    background-color: rgb(8,136,38);
     color: white;
-    font-size: 20px;
-    width: 135%;
+    font-size: 20pt; width: 320pt;
+    color: rgb(255,255,255);
+    letter-spacing: 0.89pt;
+
+   
     /* margin-right: 23px; */
-    margin-left: -130px;
-    height: 12vh;
+    margin-left: -180px;
+    /* margin-bottom: 109%; */
+    margin-top: -7%;
+    height: 62pt;
     cursor: pointer;
     border: 1px solid white;
-    border-radius: 5px;
-    border: 1px solid white;
+    border-radius: 6pt;
+
 }
 
 
 .job_cardbtn:hover{
 
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+/*********************************************************** failure reason *****************************************************/
+
+.page_two_complaint_list .freason{
+
+    margin-left: 60%;
+    margin-top: -6%;
+
+}
+
+/* .reasons input{
+    text-align: center;
+    justify-content: center;
+    margin-left: 60%;
+    margin-top: 10px;
+} */
+
+.reasons{
+    margin-left: 10%;
+    
+}
+
+.reasonf{
+    margin-left: 50%;
+}
+
+
+.inpt{
+    margin-left: 29%;
+}
+
+.inpt1{
+    margin-left: 341px;
+}
+
+.inpt2{
+    margin-left: 213px; 
+}
+
+.inpt3{
+    margin-left: 312px;
+}
+
+
+.lable{
+    margin-left: 2%;
+}
+
+.S_pan{
+    border-right: 2px dashed #00a53e;
+    /* font-size: 100px; */
+    height: 10vh;
+    margin-top: 10px;
+    margin-left: 12px;
 }
